--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.min.js"
         integrity="sha384-Rx+T1VzGupg4BHQYs2gCW9It+akI2MM/mndMCy36UVfodzcJcF0GGLxZIzObiEfa"
         crossorigin="anonymous"></script>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+
 </head>
 
 <body>
@@ -24,12 +23,16 @@
     <div id="app">
         <div class="container">
             <div class="new-task">
-                <input type="text">
-                <button>Aggiungi</button>
-                <div></div>
+                <input v-model="newTask" type="text">
+                <button @click="addTask">Aggiungi</button>
+
             </div>
             <div class="task-container">
+                <ul>
+                    <li class="task" v-for="task in task">
 
+                    </li>
+                </ul>
             </div>
         </div>
 
@@ -43,7 +46,7 @@
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
 
     <!-- Script my JS -->
-    <script src="./assets/script.js"></script>
+    <script src="./assets/main.js"></script>
 
     <!-- Link Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
