--- a/index.html
+++ b/index.html
@@ -6,30 +6,37 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>TO DO List</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+        integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+
     <link rel="stylesheet" href="./assets/style.css" />
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.min.js"
-        integrity="sha384-Rx+T1VzGupg4BHQYs2gCW9It+akI2MM/mndMCy36UVfodzcJcF0GGLxZIzObiEfa"
-        crossorigin="anonymous"></script>
+
 
 </head>
 
 <body>
 
-    <div id="app" class="container">
+    <div id="app" class="container my-5">
 
 
         <div class="new-task">
-            <input type="text" v-model="newTask">
-            <button @click="addTask">Aggiungi</button>
+            <input type="text" v-model="newTask" class="py-1 px-5 me-5 rounded border"
+                placeholder="inserisci qui la tua task">
+            <button @click="addTask" class="btn btn-primary border bottom">Aggiungi</button>
             <small class="mx-3 text-danger" v-show="error">Devi inserire una task che non sia già presente nella
                 lista, e non è valido inserire una task vuota</small>
 
         </div>
-        <div class="task-container">
+        <div class="task-container my-5">
             <ul>
                 <li v-for="task in tasks">
                     {{task.text}}
+                    <i class="fa-solid fa-circle-minus text-danger" @click="removeTask(index)"></i>
                 </li>
+
             </ul>
         </div>
 
@@ -47,9 +54,7 @@
     <script src="./assets/main.js"></script>
 
     <!-- Link Bootstrap JS -->
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
-        integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
-        crossorigin="anonymous"></script>
+
 </body>
 
 </html>
