--- a/index.html
+++ b/index.html
@@ -6,11 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>TO DO List</title>
+    <link href="https://fonts.googleapis.com/css2?family=Architects+Daughter&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
         integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
     <link rel="stylesheet" href="./assets/style.css" />
 
@@ -21,18 +24,20 @@
 
     <div id="app" class="container my-5">
 
+        <h1 class="mb-5 ">TO DO List:</h1>
+
 
         <div class="new-task">
-            <input type="text" v-model="newTask" class="py-1 px-5 me-5 rounded border"
+            <input type="text" v-model="newTask" class="py-1 ps-2 pe-5 me-5 rounded border"
                 placeholder="inserisci qui la tua task">
             <button @click="addTask" class="btn btn-primary border bottom">Aggiungi</button>
-            <small class="mx-3 text-danger" v-show="error">Devi inserire una task che non sia già presente nella
-                lista, e non è valido inserire una task vuota</small>
+            <p class="mx-3 text-danger my-2" v-show="error">Devi inserire una task che non sia già presente nella
+                lista, e non è valido inserire una task vuota</p>
 
         </div>
         <div class="task-container my-5">
-            <ul>
-                <li v-for="(task, index) in tasks">
+            <ul class=" my-3" v-if="tasks.length > 0">
+                <li v-for="(task, index) in tasks" class="list-group-item d-flex justify-content-between">
                     {{task.text}}
                     <i class="fa-solid fa-circle-minus text-danger" @click="removeTask(index)"></i>
                 </li>
